kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: helloworld
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image:  gcr.io/megangcp/helloworld
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
