kubernetes/hello-spin.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spin-helloworld-v1
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v1
    spec:
      containers:
      - name: helloworld
        image:  gcr.io/mokeefe-sandbox/github.com/m-okeefe/helloworld:stable
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: spin-helloworld-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: helloworld
        image:  gcr.io/mokeefe-sandbox/github.com/m-okeefe/helloworld:canary
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
