kubernetes/hello-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
  - port: 80
    targetPort: 8080
    name: http
