kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hellosvc
spec:
  type: LoadBalancer
  selector:
    app: helloworld
  ports:
  - port: 80
    targetPort: 8080
    name: http
