kubernetes/istio-no-spin.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hello-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: helloworld
spec:
  hosts:
  - "*"
  gateways:
  - hello-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: spin-hello-svc
        port:
          number: 80
        subset: v1
      weight: 90
    - destination:
        host: spin-hello-svc
        port:
          number: 80
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: helloworld
spec:
  host: spin-hello-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: v1
kind: Service
metadata:
  name: spin-hello-svc
  annotations:
    prometheus.io/scrape: 'true'
spec:
  type: ClusterIP
  selector:
    app: helloworld
  ports:
  - port: 80
    targetPort: 8080
    name: http
